force-app/main/default/objects/Production__c/fields/A_P_DCP_Date__c.field-meta.xml
<CustomField>
    <fullName>A_P_DCP_Date__c</fullName>
    <label>A.P/DCP Date</label>
    <type>Date</type>
</CustomField>