force-app/main/default/objects/Production__c/fields/Creative_Executive__c.field-meta.xml
<CustomField>
    <fullName>Creative_Executive__c</fullName>
    <label>Creative Executive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>