force-app/main/default/objects/Production__c/fields/Daily_Lab__c.field-meta.xml
<CustomField>
    <fullName>Daily_Lab__c</fullName>
    <label>Daily Lab</label>
    <length>50</length>
    <type>Text</type>
</CustomField>