force-app/main/default/objects/Production__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <type>TextArea</type>
</CustomField>