force-app/main/default/objects/Production__c/fields/Dub_At__c.field-meta.xml
<CustomField>
    <fullName>Dub_At__c</fullName>
    <label>Dub At</label>
    <length>100</length>
    <type>Text</type>
</CustomField>