force-app/main/default/objects/Production__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Date</type>
</CustomField>