force-app/main/default/objects/Production__c/fields/Lawyer_Legal__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Legal__c</fullName>
    <label>Lawyer/Legal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>