force-app/main/default/objects/Production__c/fields/MPAA_Date__c.field-meta.xml
<CustomField>
    <fullName>MPAA_Date__c</fullName>
    <label>MPAA Date</label>
    <type>Date</type>
</CustomField>