force-app/main/default/objects/Production__c/fields/Music_Editor__c.field-meta.xml
<CustomField>
    <fullName>Music_Editor__c</fullName>
    <label>Music Editor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>