force-app/main/default/objects/Production__c/fields/Negative_Cutter__c.field-meta.xml
<CustomField>
    <fullName>Negative_Cutter__c</fullName>
    <label>Negative Cutter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>