force-app/main/default/objects/Production__c/fields/Number_of_Reels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reels__c</fullName>
    <label>Number of Reels</label>
    <length>100</length>
    <type>Text</type>
</CustomField>