force-app/main/default/objects/Production__c/fields/Post_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Post_Supervisor__c</fullName>
    <label>Post Supervisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>