force-app/main/default/objects/Production__c/fields/Posting_At__c.field-meta.xml
<CustomField>
    <fullName>Posting_At__c</fullName>
    <label>Posting At</label>
    <length>100</length>
    <type>Text</type>
</CustomField>