force-app/main/default/objects/Production__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <label>Producer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>