force-app/main/default/objects/Production__c/fields/Production_Co__c.field-meta.xml
<CustomField>
    <fullName>Production_Co__c</fullName>
    <label>Production Co.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>