force-app/main/default/objects/Production__c/fields/Production_No__c.field-meta.xml
<CustomField>
    <fullName>Production_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production No</label>
    <referenceTo>Production_No__c</referenceTo>
    <relationshipLabel>Production Name</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>