force-app/main/default/objects/Production__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <label>Ratio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>