force-app/main/default/objects/Production__c/fields/Release_Lab__c.field-meta.xml
<CustomField>
    <fullName>Release_Lab__c</fullName>
    <label>Release Lab</label>
    <length>50</length>
    <type>Text</type>
</CustomField>