force-app/main/default/objects/Production__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <label>Run Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>