force-app/main/default/objects/Production__c/fields/Shoot_Location__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Location__c</fullName>
    <label>Shoot Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>