force-app/main/default/objects/Production__c/fields/Sound_Design__c.field-meta.xml
<CustomField>
    <fullName>Sound_Design__c</fullName>
    <label>Sound Design</label>
    <length>100</length>
    <type>Text</type>
</CustomField>