force-app/main/default/objects/Production__c/fields/Sound_Format__c.field-meta.xml
<CustomField>
    <fullName>Sound_Format__c</fullName>
    <label>Sound Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>