force-app/main/default/objects/Production__c/fields/Total_Footage__c.field-meta.xml
<CustomField>
    <fullName>Total_Footage__c</fullName>
    <label>Total Footage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>