force-app/main/default/objects/Production__c/fields/YCM_Vaulted__c.field-meta.xml
<CustomField>
    <fullName>YCM_Vaulted__c</fullName>
    <label>YCM Vaulted</label>
    <type>Date</type>
</CustomField>