force-app/main/default/objects/Production__c/fields/YCMs__c.field-meta.xml
<CustomField>
    <fullName>YCMs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YCMs</label>
    <type>Checkbox</type>
</CustomField>