force-app/main/default/objects/Production__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Director__c</columns>
    <columns>Dub_At__c</columns>
    <columns>Editor__c</columns>
    <columns>Creative_Executive__c</columns>
    <columns>Finish__c</columns>
    <columns>Negative_Cutter__c</columns>
    <columns>Post_Supervisor__c</columns>
    <columns>Posting_At__c</columns>
    <columns>Producer__c</columns>
    <columns>Production_Co__c</columns>
    <columns>Rating__c</columns>
    <columns>Ratio__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Start__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>