force-app/main/default/objects/Production__c/listViews/Limited.listView-meta.xml
<ListView>
    <fullName>Limited</fullName>
    <columns>NAME</columns>
    <columns>Creative_Executive__c</columns>
    <columns>Producer__c</columns>
    <columns>Rating__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Start__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Productions</label>
</ListView>